# multi-agent-executor

./: README.md  README_ru.md  docker-compose.yml  testing.md  testing_ru.md
services/pikobot/: Dockerfile  LICENSE  README.md  SECURITY.md  bootstrap_env.py  docker-compose.yml  entrypoint.sh  inst.py  pyproject.toml
services/pikobot/pikobot/: __init__.py  __main__.py
services/pikobot/pikobot-config/: config.json
services/pikobot/pikobot/agent/: __init__.py  context.py  hook.py  loop.py  memory.py  runner.py  skills.py  subagent.py
services/pikobot/pikobot/bus/: __init__.py  queue.py
services/pikobot/pikobot/channels/: __init__.py  base.py  manager.py  rabbitmq.py  registry.py
services/pikobot/pikobot/cli/: __init__.py  commands.py  onboard.py  stream.py
services/pikobot/pikobot/command/: __init__.py  builtin.py  router.py
services/pikobot/pikobot/config/: __init__.py  loader.py  paths.py  schema.py
services/pikobot/pikobot/cron/: __init__.py  service.py
services/pikobot/pikobot/heartbeat/: __init__.py  service.py
services/pikobot/pikobot/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  openai_codex_provider.py  openai_compat_provider.py  registry.py
services/pikobot/pikobot/session/: __init__.py  manager.py
services/pikobot/pikobot/skills/: README.md
services/pikobot/pikobot/templates/: AGENTS.md  HEARTBEAT.md  USER.md
services/pikobot/pikobot/utils/: __init__.py  evaluator.py  helpers.py
services/pikobot/tests/: test_docker.sh
services/pikobot/tests/agent/: test_consolidate_offset.py  test_context_prompt_cache.py  test_evaluator.py  test_gemini_thought_signature.py  test_heartbeat_service.py  test_loop_consolidation_tokens.py  test_loop_cron_timezone.py  test_loop_save_turn.py  test_memory_consolidation_types.py  test_onboard_logic.py  test_runner.py  test_session_manager_history.py  test_skill_creator_scripts.py  test_task_cancel.py
services/pikobot/tests/channels/: test_base_channel.py
services/pikobot/tests/cli/: test_cli_input.py  test_commands.py  test_restart_command.py
services/pikobot/tests/config/: test_config_migration.py  test_config_paths.py
services/pikobot/tests/cron/: test_cron_service.py  test_cron_tool_list.py
services/pikobot/tests/providers/: test_azure_openai_provider.py  test_custom_provider.py  test_litellm_kwargs.py  test_mistral_provider.py  test_provider_retry.py  test_providers_init.py
services/pikobot/tests/security/: test_security_network.py
services/pikobot/tests/tools/: test_exec_security.py  test_filesystem_tools.py  test_mcp_tool.py  (+5 more)
(+42 files in other folders)
